--- a/components/axu1tu1o2-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/axu1tu1o2-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: axu1tu1o2-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.6230c817-0df2-442a-87c4-b60311104c65.prod.konfluxeaas.com/rhtap/rhtap-qe-nodejs:0a665bc76eba643bb3646c7544a4abcf9990b866@sha256:797771c59b033329b9435faecdd25a66aadabee690ebfe3a80d66d8509e6cb1b
+          name: container-image
